--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "TimeCalc"]
 	path = TimeCalc
-	url = git@github.com:mjc-ermont/TimeCalcs.git
+	url = https://github.com/mjc-ermont/TimeCalcs.git
